# pocket_assistant

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  config.py  docker-compose-deployment.yml  docker-compose-local.yml  logger.py  logging.conf  meta.py  pyproject.toml  routing.py  tox.ini
.github/workflows/: cd.yml  ci.yml
core/: base.py  broadcasting.py  dependencies.py  mixins.py  schemas.py
raspberry/: consts.py  models.py  routers.py  schemas.py
terraform/: main.tf  variables.tf
terraform/backend/: config.tf
terraform/modules/ec2/: ec2_boot.sh.tpl  ec2_github_runner.sh.tpl  main.tf  outputs.tf  variables.tf
tests/webhook/: test_webhook.py
tg/tg_api/: routers.py  schemas.py
tg/tg_bot/: bot.py  bot_instances.py  consts.py  dispatchers.py  routing.py
